--- a/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#8ce273">
     <a class="navbar-brand" href="">
         <img src="Resources\HotelPNG.png" style="width:35px;" />
-       Hotel SweetDreams 
+        Hotel SweetDreams
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,18 +33,27 @@
                     <a class="dropdown-item" href="CReservaciones">Reservaciones</a>
                 </div>
             </li>
-            @if (AuthenticationService.cliente != null)
-            {
-                <li class="nav-item active" role="button">
-                    <a class="nav-link " href="logout ">LogOut</a>
-                </li>
-            }
-            else
-            {
-                <li class="nav-item active" role="button" >
-                    <a class="nav-link " href="login">LogIn</a>
-                </li>
-            }
+
         </ul>
+
+
     </div>
+
+    <ul class="nav justify-content-end">
+
+        @if (AuthenticationService.cliente != null)
+        {
+            <li class="nav-item active justify-content-end" role="button">
+                <a class="nav-link " href="logout ">LogOut</a>
+            </li>
+        }
+        else
+        {
+            <li class="nav-item active justify-content-end" role="button">
+                <a class="nav-link " href="login">LogIn</a>
+            </li>
+        }
+    </ul>
+
+
 </nav>
